[metadata]
name = pykdumpfile
version = 0.5.5.1
description = Python bindings to libkdumpfile
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ptesarik/pykdumpfile
author = Petr Tesarik
author_email = ptesarik@suse.com
license = GPLv2+
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
python_requires = >=3.0
packages =
    addrxlat
    kdumpfile
install_requires = cffi >= 1.8
test_suite = tests
